# incremental

./: cabal.project  incremental.cabal
src/Example/: Fast.hs  Slow.hs
src/Incremental/: Arrow.hs  Fast.hs  Slow.hs
