cabal-version: 2.4
name: incremental
version: 0.0.0.0
category: Control
build-type: Simple

author: Alexis King
maintainer: Alexis King <lexi.lambda@gmail.com>

license: ISC
copyright: 2019 Hasura, Alexis King

common common
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
    -fmax-simplifier-iterations=20

  build-depends:
    , base
    , ghc-prim
    , mtl
    -- , profunctors

  default-language: Haskell2010
  default-extensions:
    Arrows BangPatterns BlockArguments ConstraintKinds DataKinds
    DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor
    DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DerivingVia
    EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances
    FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs
    KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns
    OverloadedStrings PatternSynonyms QuantifiedConstraints RankNTypes
    RoleAnnotations ScopedTypeVariables StandaloneDeriving TupleSections
    TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
    ViewPatterns

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Incremental.Arrow
    Incremental.Fast
    Incremental.Slow

    Example.Fast
    Example.Slow
